force-app/main/default/objects/Beat_Member__c/Beat_Member__c.object-meta.xml
<CustomObject>
    <label>Beat Member</label>
    <pluralLabel>Beat Members</pluralLabel>
    <description>Beat Member</description>
    <nameField>
        <label>Beat Member Name</label>
        <type>AutoNumber</type>
        <displayFormat>BM-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>