force-app/main/default/objects/Beat_Member__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beat Memberships</relationshipLabel>
    <relationshipName>Beat_Memberships</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
</CustomField>