force-app/main/default/objects/Beat_Member__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <label>Beat</label>
    <type>MasterDetail</type>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Beat Members</relationshipLabel>
    <relationshipName>Beat_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Beat</description>
</CustomField>