force-app/main/default/objects/Beat_Member__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Beat Memberships</relationshipLabel>
    <relationshipName>Lead_Beat_Memberships</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead</description>
</CustomField>