force-app/main/default/objects/Beat_Member__c/fields/Visit_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Visit_Frequency_Days__c</fullName>
    <label>Visit Frequency Days</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>7</defaultValue>
    <description>Visit Frequency Days</description>
</CustomField>